--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,13 @@
 body {
   max-width: 100%;
   height: 100dvh;
+  font-family: "Roboto Mono", monospace;
+  background-color: #191919;
 }
 
 .header {
   display: flex;
-  background-color: #024c79;
+  background-color: #012338;
   justify-content: center;
   align-items: center;
 }
@@ -45,13 +47,11 @@ body {
   display: inline-block;
   white-space: nowrap;
   animation: scroll-left 20s linear infinite;
-  /* Evita largura desnecessária */
-  width: max-content; /* ou remova completamente */
+  width: max-content;
 }
 
 .stacks img {
-  height: 40px;
-  margin: 0 15px;
+  height: 60px;
   vertical-align: middle;
 }
 
@@ -62,4 +62,37 @@ body {
   100% {
     transform: translateX(-50%);
   }
+}
+
+.btn {
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  margin: 20px auto;
+  font-family: "League Spartan", sans-serif;
+}
+
+.btn-link {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  background: #ffffff;
+  height: 80px;
+  width: 300px;
+  margin: 20px auto;
+  border: 1px solid #012338;
+  border-radius: 12px;
+}
+
+.btn-link a {
+  font-size: 20px;
+  text-decoration: none;
+  color: #191919;
+  font-weight: 500;
+}
+
+.btn-link img {
+  max-width: 80px;
+  max-height: 60px;
 }
