feat: background color buttons changed

--- a/css/style.css
+++ b/css/style.css
@@ -96,3 +96,23 @@ body {
   max-width: 80px;
   max-height: 60px;
 }
+
+.btn-link:nth-child(1) {
+  background-color: #fffafa;
+}
+
+.btn-link:nth-child(2) {
+  background-color: #c0d8e0;
+}
+
+.btn-link:nth-child(3) {
+  background-color: #c6c0e0;
+}
+
+.btn-link:nth-child(4) {
+  background-color: #e0c0c0;
+}
+
+.btn-link:nth-child(5) {
+  background-color: #e97979;
+}
