--- a/css/style.css
+++ b/css/style.css
@@ -117,16 +117,17 @@ body {
   background-color: #e97979;
 }
 
+.btn-link:hover {
+  cursor: pointer;
+  background-color: #8fbcc7;
+  transition-duration: 500ms;
+}
+
 .footer {
   text-align: center;
   padding: 20px;
   background-color: #1e2e3e;
   color: white;
   font-size: 14px;
-}
-
-.btn-link:hover {
-  cursor: pointer;
-  background-color: #8fbcc7;
-  transition-duration: 500ms;
+  bottom: 0;
 }
