--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
-  max-width: 100%;
-  height: 100dvh;
+  display: flex;
+  flex-direction: column;
+  min-height: 100dvh;
   font-family: "Roboto Mono", monospace;
   background-color: #191919;
 }
@@ -38,6 +39,12 @@ body {
   color: #ffffff;
 }
 
+.main {
+  display: flex;
+  flex: 1;
+  align-items: center;
+  justify-content: center;
+}
 .stacks-techs {
   overflow: hidden;
   padding: 10px 0;
@@ -64,7 +71,7 @@ body {
   }
 }
 
-.btn {
+.section-btn {
   flex-direction: column;
   flex-wrap: wrap;
   align-items: center;
@@ -78,8 +85,8 @@ body {
   align-items: center;
   justify-content: space-around;
   background: #ffffff;
-  height: 80px;
-  width: 300px;
+  height: 150px;
+  width: 500px;
   margin: 20px auto;
   border: 1px solid #012338;
   border-radius: 12px;
@@ -119,8 +126,9 @@ body {
 
 .btn-link:hover {
   cursor: pointer;
-  background-color: #8fbcc7;
+  background-color: #7d57a8;
   transition-duration: 500ms;
+  transform: scale(1.2);
 }
 
 .footer {
@@ -130,4 +138,18 @@ body {
   color: white;
   font-size: 14px;
   bottom: 0;
+}
+
+@media (max-width: 500px) {
+  .btn-link {
+    width: 350px;
+    height: 100px;
+  }
+}
+
+@media (max-width: 350px) {
+  .btn-link {
+    width: 250px;
+    height: 100px;
+  }
 }
